--- a/HR System.PL/Views/Shared/_Layout.cshtml
+++ b/HR System.PL/Views/Shared/_Layout.cshtml
@@ -460,6 +460,7 @@
     <!-- Page level custom scripts -->
     <script src="js/demo/chart-area-demo.js"></script>
     <script src="js/demo/chart-pie-demo.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
                @await RenderSectionAsync("Scripts", required: false)
 </body>
 
